feat: add project

--- a/prepros.config
+++ b/prepros.config
@@ -14,10 +14,10 @@
       "afterUpload": false
     },
     "sync": {
-      "enable": false,
-      "mouse": true,
-      "keyboard": true,
-      "form": true,
+      "enable": true,
+      "mouse": false,
+      "keyboard": false,
+      "form": false,
       "scroll": true
     },
     "watcher": {
